--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-html-parser": "^2.0.2",
     "react-player": "^2.8.2",
     "react-scripts": "4.0.2",
+    "storejs": "^1.1.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
